koi/tnt/ns-tnt.yml
kind: Namespace
apiVersion: v1
metadata:
  name: tnt
  labels:
    istio-injection: enabled
