koi/tnt/deploy-tnt.yml
apiVersion: v1
kind: Service
metadata:
  name: tnt-frontend-service-koidemo
  namespace: tnt
  labels:
    app: tnt-frontend-koidemo
    service: tnt-frontend-koidemo
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: tnt-frontend-koidemo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tnt-frontend-app-koidemo
  namespace: tnt
  labels:
    app: tnt-frontend-koidemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tnt-frontend-koidemo
  template:
    metadata:
      labels:
        app: tnt-frontend-koidemo
    spec:
      containers:
      - name: tnt-frontend-app-koidemo
        image: de.icr.io/airc-registry/tnt-frontend:1.0.0 #registry.airc.pt/tnt-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      imagePullSecrets:
        -  name: tnt-de-icr-io
---

apiVersion: v1
kind: Service
metadata:
  name: tnt-backend-service-koidemo
  namespace: tnt
  labels:
    app: tnt-backend-koidemo
    service: tnt-backend-koidemo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: tnt-backend-koidemo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tnt-backend-app-koidemo
  namespace: tnt
  labels:
    app: tnt-backend-koidemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tnt-backend-koidemo
  template:
    metadata:
      labels:
        app: tnt-backend-koidemo
    spec:
      containers:
      - env:
        - name: ADM_URL
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: ADM_URL
        - name: ALFRESCO_APP
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: ALFRESCO_APP_TNT
        - name: ALFRESCO_PASSWORD
          valueFrom:
            secretKeyRef:
              name: koi-secret
              key: ALFRESCO_PASSWORD
        - name: ALFRESCO_URL
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: ALFRESCO_URL
        - name: ALFRESCO_USERNAME
          valueFrom:
            secretKeyRef:
              name: koi-secret
              key: ALFRESCO_USERNAME
        - name: DAS_EMAIL
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: DAS_EMAIL
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: database-envs
              key: DB_TNT_PASSWORD
        - name: DATABASE_URL
          value: jdbc:postgresql://pg-ha-postgresql-ha-pgpool.database.svc.cluster.local:5432/tnt?connectTimeout=60
        - name: DATABASE_USERNAME
          valueFrom:
            secretKeyRef:
              name: database-envs
              key: DB_TNT_USER
        - name: KEYCLOAK_PASSWORD
          valueFrom:
            secretKeyRef:
              name: koi-secret
              key: KEYCLOAK_PASSWORD
        - name: KEYCLOAK_REALM
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: KEYCLOAK_REALM
        - name: KEYCLOAK_URL
          valueFrom:
            configMapKeyRef:
              name: koi-config
              key: KEYCLOAK_URL
        - name: KEYCLOAK_USER
          valueFrom:
            secretKeyRef:
              name: koi-secret
              key: KEYCLOAK_USER
        name: tnt-backend-app-koidemo
        image: de.icr.io/airc-registry/tnt-backend:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
        -  name: tnt-de-icr-io
